2007-12-30  Nicolas Bruguier  <gandalfn@club-internet.fr>
    * data/cairo-compmgr.schemas.in:
    * src/Makefile.am:
    * src/ccm-pixmap-backend.c:
    * src/ccm-pixmap-backend.h:
    * src/ccm-pixmap-image.c:
    * src/ccm-pixmap-image.h:
    * src/ccm-pixmap-shm.c:
    * src/ccm-pixmap-shm.h:
    * src/ccm-pixmap-xrender.c:
    * src/ccm-pixmap-xrender.h:
    * src/ccm-pixmap.c:
    * src/ccm-pixmap.h:
    * src/ccm-screen.c:
    * src/ccm-screen.h: First implementation of pixmap backends, we can use the
                        native backend associated to window or shm/get_image 
                        backend. For now only xrender native backend with no 
                        damage repair zone a bit slow.

2007-12-27  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* configure.ac: Bump version to 0.1.3

============ Version 0.1.2
2007-12-27  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-display.c: Destruct selection owner window on display destruction

2007-12-27  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* data/Makefile.am: 
	* data/cairo-compmgr-off-24.png: 
	* data/cairo-compmgr-on-24.png: 
	* data/cairo-compmgr.png: 
	* data/cairo-compmgr.schemas.in: 
	* src/Makefile.am: 
	* src/cairo-compmgr.c: 
	* src/ccm-display.c: 
	* src/ccm-drawable.c: 
	* src/ccm-extension-loader.c: 
	* src/ccm-extension.c: 
	* src/ccm-screen.c: 
	* src/ccm-tray-icon.c: 
	* src/ccm-tray-icon.h: 
	* src/ccm-tray-menu.c: 
	* src/ccm-tray-menu.h: 
	* src/ccm-watch.c: 
	* src/ccm.h: Add tray icon launcher

2007-12-27  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/freeze/ccm-freeze.c: 
	* src/ccm-screen.c: Force check hint type

2007-12-27  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-screen.c: Revert "Use ccm_screen_restack on window add"

2007-12-27  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-screen.c: Use ccm_screen_restack on window add

2007-12-27  Nicolas Bruguier  <gandalfn@club-internet.fr>
