@@ -50,7 +50,7 @@
          <key>/schemas/apps/cairo-compmgr/default/screen/native_pixmap_bind</key>
          <applyto>/apps/cairo-compmgr/default/screen/native_pixmap_bind</applyto>
          <owner>gnome</owner>
-         <type>boolean</type>
+         <type>bool</type>
          <default>false</default>
          <locale name="C">
             <short>Use pixmap bind associated to backend</short>
